#87 basic hono setup (#89)
