# apps/_deprecated/core-node-v1/src/app/routes/v1.health.ts
@@ -1,0 +1,10 @@
+import { openApiRouter } from './router';
+
+openApiRouter.get('/v1/health', {
+	handler: (_req, res) => {
+		res.send({
+			message: 'App is up and running',
+			status: 'Up'
+		});
+	}
+});
