# packages/ee_api-core/src/app/routes/v1.health.ts
@@ -1,0 +1,10 @@
+import { openApiRouter } from '../router';
+
+openApiRouter.get('/v1/health', {
+	handler: (c) => {
+		return c.json({
+			message: 'App is up and running',
+			status: 'Up'
+		});
+	}
+});
