# packages/types/src/core/resources/openapi-v1.yaml
@@ -1,209 +1,206 @@
 openapi: 3.0.3
 info:
-  title: Dyn.Art Core Service API
-  description: API for validating API keys, fetching and uploading templates and assets.
-  version: 1.0.0
+  title: dyn.art core service
+  version: 0.0.1
 servers:
   - url: https://api.dyn.art
     description: Production server
+tags:
+  - name: info
+    description: Endpoints to retrieve general information about the service e.g. its health status
+  - name: user
+    description: Endpoints related to the user entity
 
 paths:
-  /v1/validate-key:
-    post:
-      summary: Validate API key and count usage
+  /v1/health:
+    get:
       tags:
-        - Authentication
+        - info
+      summary: Check health
+      description: ''
+      operationId: checkHealth
+      responses:
+        '200':
+          description: Server is up and running
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthDto'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppErrorDto'
+
+  /v1/user/register:
+    post:
+      tags:
+        - user
+      summary: Register user
+      description: ''
+      operationId: registerUser
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                apiKey:
-                  type: string
-                  description: API key to be validated
-              required:
-                - apiKey
+              $ref: '#/components/schemas/RegisterUserDto'
       responses:
         '200':
-          description: API key is valid
+          description: Successful operation
+        '409':
+          description: Email address already registered
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: API key is valid
-        '401':
-          description: Unauthorized
+                $ref: '#/components/schemas/AppErrorDto'
+        '500':
+          description: Internal server error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Unauthorized
-
-  /v1/asset:
-    post:
-        summary: Upload asset for user
-        tags:
-          - Upload
-        requestBody:
-          required: true
-          content:
-            multipart/form-data:
-              schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                  asset:
-                    type: string
-                    format: binary
-                required:
-                  - userId
-                  - asset
-        security:
-          - ApiKeyAuth: []
-        responses:
-          '201':
-            description: Asset uploaded successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Asset uploaded successfully
-          '401':
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Unauthorized
+                $ref: '#/components/schemas/AppErrorDto'
+  /v1/user/login:
     get:
-      summary: Get asset URL
       tags:
-        - Assets
+        - user
+      summary: Log user in
+      description: ''
+      operationId: loginUser
       parameters:
-        - name: id
+        - name: email
           in: query
+          description: The email for login
           required: true
           schema:
             type: string
-          description: ID of the asset
-      security:
-        - ApiKeyAuth: []
-      responses:
-        '200':
-          description: Presigned URL for the asset
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  url:
-                    type: string
-                    example: https://yourbucket.s3.amazonaws.com/asset-id?presigned-url
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Unauthorized
-
-  /v1/template:
-    post:
-        summary: Upload template for user
-        tags:
-          - Upload
-        requestBody:
-          required: true
-          content:
-            multipart/form-data:
-              schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                  template:
-                    type: string
-                    format: binary
-                required:
-                  - userId
-                  - template
-        security:
-          - ApiKeyAuth: []
-        responses:
-          '201':
-            description: Template uploaded successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Template uploaded successfully
-          '401':
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Unauthorized
-    get:
-      summary: Get template content
-      tags:
-        - Templates
-      parameters:
-        - name: path
+        - name: password
           in: query
+          description: The password for login in clear text
           required: true
           schema:
             type: string
-          description: Path of the template
-      security:
-        - ApiKeyAuth: []
       responses:
         '200':
-          description: Template content
+          description: Successful operation
+          headers:
+            X-Rate-Limit:
+              description: Calls per hour allowed by the user
+              schema:
+                type: integer
+                format: int32
+            X-Expires-After:
+              description: Date in UTC when token expires
+              schema:
+                type: string
+                format: date-time
           content:
+            application/xml:
+              schema:
+                type: string
             application/json:
               schema:
                 type: string
-                example: Template content here
-        '401':
-          description: Unauthorized
+        '400':
+          description: Invalid username/email/password supplied
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Unauthorized
-   
+                $ref: '#/components/schemas/AppErrorDto'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppErrorDto'
+  /v1/user/logout:
+    get:
+      tags:
+        - user
+      summary: Log out current logged in user session
+      description: ''
+      operationId: logoutUser
+      parameters: []
+      responses:
+        '200':
+          description: Successful operation
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppErrorDto'
 
 components:
+  schemas:
+    AppErrorDto:
+      type: object
+      required:
+        - error_code
+        - error_description
+        - error_uri
+        - additional_errors
+      description: Application error
+      properties:
+        error_code:
+          type: string
+          description: Error code
+        error_description:
+          type: string
+          description: Error description
+          nullable: true
+        error_uri:
+          type: string
+          description: Error URI
+          nullable: true
+        additional_errors:
+          type: array
+          items:
+            type: object
+      example:
+        error_code: "400"
+        error_description: "Bad Request"
+        error_uri: null
+        additional_errors: []
+
+    HealthDto:
+      type: object
+      required:
+        - status
+        - message
+      properties:
+        message:
+          type: string
+        status:
+          $ref: '#/components/schemas/HealthStatus'
+    HealthStatus:
+      type: string
+      enum:
+        - Up
+        - Restricted
+        - Down
+      example: Up
+
+    RegisterUserDto:
+      type: object
+      required:
+        - email
+        - username
+        - password
+      properties:
+        email:
+          type: string
+          description: The email for the registeration
+        username:
+          type: string
+          description: The user name for the registeration
+        password: 
+          type: string
+          description: The password for the registeration in clear text
+
   securitySchemes:
-    ApiKeyAuth:
-      type: apiKey
-      in: header
-      name: x-api-key
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
